force-app/main/default/objects/copado__User_Story__c/fields/copado__Promotion_Test_Level__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion_Test_Level__c</fullName>
    <description>Test Level to apply in the deployment of the User Story.</description>
    <inlineHelpText>Test Level to apply in the deployment of the User Story.</inlineHelpText>
    <label>Promotion Test Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoTestRun</fullName>
                <default>true</default>
                <label>NoTestRun</label>
            </value>
            <value>
                <fullName>RunSpecifiedTests</fullName>
            </value>
            <value>
                <fullName>RunLocalTests</fullName>
            </value>
            <value>
                <fullName>RunAllTestsInOrg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>