force-app/main/default/objects/copado__User_Story__c/fields/Developer_Email__c.field-meta.xml
<CustomField>
    <fullName>Developer_Email__c</fullName>
    <formula>copado__Developer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Email</label>
    <type>Text</type>
</CustomField>