force-app/main/default/objects/copado__User_Story__c/fields/jira_description__c.field-meta.xml
<CustomField>
    <fullName>jira_description__c</fullName>
    <label>JIRA Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>