force-app/main/default/objects/copado__User_Story__c/fields/JIRA_URL__c.field-meta.xml
<CustomField>
    <fullName>JIRA_URL__c</fullName>
    <formula>IF(ISBLANK(Jira_Key__c) ,&quot;Not in JIRA&quot;, Jira_Key__c  &amp; &quot; &quot; &amp; HYPERlINK(&quot;https://porcelanosa-sforce.atlassian.net/browse/&quot; &amp;  Jira_Key__c, &quot;View in Jira&quot;, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JIRA Info</label>
    <type>Text</type>
</CustomField>