force-app/main/default/objects/copado__User_Story__c/fields/porsa_CredentialName__c.field-meta.xml
<CustomField>
    <fullName>porsa_CredentialName__c</fullName>
    <description>THis field gets the credential name in a flow (used to update the credential in JIRA)</description>
    <label>Credential Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>