force-app/main/default/objects/copado__User_Story__c/fields/porsa_requested_By__c.field-meta.xml
<CustomField>
    <fullName>porsa_requested_By__c</fullName>
    <label>Requested By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>