force-app/main/default/objects/copado__User_Story__c/fields/SCA_Score__c.field-meta.xml
<CustomField>
    <fullName>SCA_Score__c</fullName>
    <description>Static Code Analysis score</description>
    <label>SCA Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>