force-app/main/default/objects/copado__User_Story__c/fields/StoryURL__c.field-meta.xml
<CustomField>
    <fullName>StoryURL__c</fullName>
    <label>Story URL</label>
    <type>Url</type>
</CustomField>