force-app/main/default/objects/copado__User_Story__c/recordTypes/Project_Story.recordType-meta.xml
<RecordType>
    <fullName>Project_Story</fullName>
    <active>true</active>
    <description>External projects user stories</description>
    <label>Project Story</label>
</RecordType>