force-app/main/default/objects/copado__User_Story__c/listViews/Active_User_Stories.listView-meta.xml
<ListView>
    <fullName>Active_User_Stories</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>copado__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Jira_Key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Status__c</field>
        <operation>equals</operation>
        <value>To Do</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>equals</operation>
        <value>Ready for testing</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Active User Stories</label>
</ListView>