force-app/main/default/objects/copado__User_Story__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Epic__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>Jira_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>