force-app/main/default/objects/copado__User_Story__c/listViews/Stories_per_Credential.listView-meta.xml
<ListView>
    <fullName>Stories_per_Credential</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <filterScope>Everything</filterScope>
    <label>Stories Kanban</label>
</ListView>